--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.url=jdbc:mysql://localhost:3306/clothes_ms
 jdbc.username=root
 jdbc.password=admin
