logDAOImpl,adminDAOImpl实现往数据库存入数据

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 	    	org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
 	 	</filter-class>
     </filter>
+    
     <filter-mapping>
     	<filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern >                 
@@ -19,9 +20,9 @@
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:beans.xml</param-value>
+		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
-  
+  	
   
   
 </web-app>
