--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,11 @@
 			<artifactId>struts2-core</artifactId>
 			<version>2.3.15.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.7.4</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -94,6 +98,11 @@
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>javax.servlet.jsp.jstl</artifactId>
 			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.mchange</groupId>
+		  <artifactId>c3p0</artifactId>
+		  <version>0.9.5-pre3</version>
 		</dependency>
 	</dependencies>
 	<build>
